...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyLocationActivity">

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_card">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/back"/>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="General Rules For Faculties"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

...
                    android:textSize="17sp"
                    android:textColor="#fff"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="50dp"/>

                <ImageView
                    android:id="@+id/dropdown_science"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/down"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:visibility="visible"/>
                <ImageView
                    android:id="@+id/up_science"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/up"
                    android:padding="4dp"
                    android:layout_gravity="center"
...
                    android:textSize="17sp"
                    android:textColor="#fff"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="50dp"/>

                <ImageView
                    android:id="@+id/dropdown_commerce"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/down"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/up_commerce"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/up"
                    android:padding="4dp"
                    android:layout_gravity="center"
...
                    android:textSize="17sp"
                    android:textColor="#fff"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="50dp"/>

            <ImageView
                android:id="@+id/dropdown_engineering"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:padding="4dp"
                android:src="@drawable/down"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/up_engineering"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:padding="4dp"
                android:src="@drawable/up"
...
                    android:textSize="17sp"
                    android:textColor="#fff"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="50dp"/>

                <ImageView
                    android:id="@+id/dropdown_health"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/down"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:visibility="visible"/>
                <ImageView
                    android:id="@+id/up_health"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/up"
                    android:padding="4dp"
                    android:layout_gravity="center"
...
                    android:textSize="17sp"
                    android:textColor="#fff"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="50dp"/>

                <ImageView
                    android:id="@+id/dropdown_humanities"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/down"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/up_humanities"
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:src="@drawable/up"
                    android:padding="4dp"
                    android:layout_gravity="center"
...
