<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/locations"
        android:title="General Rules For Faculties"
        android:visible="true" />

    <item
        android:id="@+id/governance"
        android:title="Hierarchy Of Academic Governance"
        android:visible="true" />

    <item
        android:id="@+id/content"
        android:title="Attendance Rule For Faculties"
        android:visible="true" />

    <item
        android:id="@+id/settings"
        android:title="Curricula For Faculties"
        android:visible="true" />

    <item
        android:id="@+id/logout"
        android:title="Exit"
        android:visible="true" />

</menu>